--- a/php/composer.json
+++ b/php/composer.json
@@ -7,7 +7,9 @@
     "awurth/slim-validation": "^3.1",
     "akrabat/ip-address-middleware": "^1.0",
     "slim/twig-view": "^2.5",
-    "rmccue/requests": ">=1.0"
+    "rmccue/requests": ">=1.0",
+    "slim/csrf": "0.8.3",
+    "slim/flash": "0.4.0"
   },
   "autoload": {
     "psr-4": {
